src/components/Header/Header.css
header {
	background-color: rgb(180, 180, 180);
	display: flex;
	justify-content: space-evenly;
	padding: 6px;
	border-bottom: 1px solid var(--color-border);;
	position: fixed;
	top: 0;
	width: 100vw;
	z-index: 5;
}

h1 {
	font-size: 24px;
	margin: 0;
}

a {
	text-decoration: none;
	color: var(--color-text);
}

@media only screen and (max-width: 830px) {
	header {
		height: 33px;
	}
}

